[tool.poetry]
name = "Game-Builder"
version = "0.1.0"
description = "Game-Bulding with AI"
authors = ["Tanish Gupta"]



[tool.poetry.dependencies]
python = "3.12.3"
crewai = "0.1.24"
python-dotenv = "1.0.0"
langchain-openai = "^0.0.5"
unstructured = "==0.10.25"
pyownet = '0.10.0.post1'
tools = "^0.1.9"


[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"